loadtest: improve preparation stage

--- a/loadtest/Makefile
+++ b/loadtest/Makefile
@@ -2,14 +2,14 @@
 USER = sshified-test
 
 prepare:
-		mkdir conf/
-		sudo useradd $(USER) -s /bin/false -m
+		mkdir -p conf/
+		id $(USER) || sudo useradd $(USER) -s /bin/false -m
 		ssh-keygen -f conf/id_rsa -N ""
 		sudo -u $(USER) mkdir -p /home/$(USER)/.ssh/
 		sudo -u $(USER) tee /home/$(USER)/.ssh/authorized_keys < conf/id_rsa.pub
 		sudo -u $(USER) chmod 700 /home/$(USER)/.ssh/
 		sudo -u $(USER) chmod 600 /home/$(USER)/.ssh/authorized_keys
-		ssh -o UserKnownHostsFile=conf/known_hosts -o StrictHostKeyChecking=no -i conf/id_rsa $(USER)@127.0.0.1 "true" || true
+		ssh-keyscan 127.0.0.1 > conf/known_hosts
 
 cleanup:
 	rm -rf conf/
