--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -18,10 +18,10 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.20'
+        go-version: '1.22'
 
     - name: Build
-      run: go build -v
+      run: make build
 
     - name: Test
       run: go test -v ./...
